[tool.poetry]
name = "slit" 
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
shortuuid = "^1.0.1"
click = "^8.0.3"
colorama = "^0.4.4"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
streamlit = "^1.16.0"
watchdog = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy = "^0.910"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
